--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,33 @@
+$main-width: 960px;
+
+@mixin styling($main-width) {
+  body {
+    .container {
+      #left {
+        width: calc((100% - #{$main-width}) / 2);
+      }
+
+      #right {
+        width: calc((100% - #{$main-width}) / 2);
+      }
+
+      #top {
+        width: 100%;
+        margin: 0 auto;
+      }
+
+      .main {
+        width: $main-width;
+      }
+
+      #main-site {
+        width: 100%;
+        margin: 0 auto;
+      }
+    }
+  }
+}
+
 html {
   box-sizing: border-box;
 }
@@ -11,15 +41,14 @@ body {
 .container {
   height: 100%;
   top: 0;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
 
   #left {
     height: 100vh;
-    width: 15vw;
-    // width: calc((100% - 960px)/2);
+    width: calc((100% - #{$main-width}) / 2);
     overflow: hidden;
     position: fixed;
     left: 0;
@@ -28,8 +57,7 @@ body {
 
   #right {
     height: 100vh;
-    // width: calc((100% - 960px)/2);
-    width: 15vw;
+    width: calc((100% - #{$main-width}) / 2);
     overflow: hidden;
     position: fixed;
     right: 0;
@@ -43,15 +71,70 @@ body {
     margin: 0 auto;
   }
 
-
   .main {
-    width: 70%;
+    width: $main-width;
     display: flex;
     flex-direction: column;
     align-content: center;
 
     #main-site {
       width: 100%;
+      margin: 0 auto;
+    }
+  }
+}
+
+@media screen and (max-width: 1221px) {
+  @include styling($main-width: 960px);
+}
+
+@media screen and (max-width: 1121px) {
+  @include styling($main-width: 760px);
+}
+
+@media screen and (max-width: 1020px) {
+  @include styling($main-width: 760px);
+}
+
+@media screen and (max-width: 920px) {
+  @include styling($main-width: 660px);
+}
+
+@media screen and (max-width: 830px) {
+  @include styling($main-width: 660px);
+}
+
+
+@media screen and (max-width: 770px) {
+  body {
+    .container {
+      #left {
+        display: none;
+      }
+
+      #right {
+        display: none;
+      }
+
+      #top {
+        width: 100vw;
+        height: 250px;
+        overflow: hidden;
+        margin: 0 auto;
+      }
+
+      .main {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+      }
+
+      #main-site {
+        width: 100%;
+        margin: 0 auto;
+      }
+
     }
   }
 }
