--- a/src/top/top.scss
+++ b/src/top/top.scss
@@ -4,6 +4,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  // min-width: 760px;
   cursor: pointer;
 }
 
@@ -12,17 +13,18 @@ body {
   background-image: url(../assets/bg-top.png);
   background-position: 0% 0%;
   background-repeat: no-repeat;
-
+  background-size: auto;
   width: 100%;
-  height: 100%;
-
+  height: 250px;
   top: 0;
   left: 50%;
-
   transform: translate(-50%, 0px);
-
   overflow: hidden;
   position: fixed;
+}
+
+.bg.active {
+  background-image: url(../assets/bg-top-phone.png);
 }
 
 .cloud {
@@ -67,15 +69,25 @@ body {
 
   .video {
     text-align: center;
+    background-size: auto;
     width: 40%;
     height: 203px;
     top: 0;
     right: 8px;
     bottom: 0;
     margin: auto;
+    margin-right: 20px;
     position: absolute;
+
+    video {
+      width: 100%;
+      // height: 100%;
+
+    }
   }
 }
+
+
 
 
 @keyframes clouds {
