--- a/src/left/left.scss
+++ b/src/left/left.scss
@@ -17,8 +17,8 @@ body {
   background-attachment: scroll;
   position: absolute;
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
 
@@ -54,7 +54,7 @@ body {
 
   .video {
     width: 91.67%;
-    bottom: 22%;
+    bottom: 50%;
     left: -200px;
     right: 0;
     margin: auto;
@@ -94,7 +94,7 @@ body {
   }
 
   .btn.active {
-    bottom: 5%;
+    bottom: 40%;
     opacity: 1;
     transition: 0.7s;
   }
