--- a/src/right/right.scss
+++ b/src/right/right.scss
@@ -19,8 +19,8 @@ body {
   background-clip: border-box;
   position: absolute;
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
 }
@@ -69,12 +69,12 @@ body {
 
   .name {
     width: 91.67%;
-    height: 30%;
+    height: 10%;
     background-image: url(../assets/4-layers.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
-    bottom: 22%;
+    bottom: 50%;
     left: -200px;
     right: 0;
     margin: auto;
@@ -106,7 +106,7 @@ body {
   }
 
   .btn.active {
-    bottom: 5%;
+    bottom: 40%;
     opacity: 1;
     transition: 0.7s;
   }
