--- a/src/style.scss
+++ b/src/style.scss
@@ -41,27 +41,29 @@ body {
 .container {
   height: 100%;
   top: 0;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 
   #left {
-    height: 100vh;
+    height: 100%;
     width: calc((100% - #{$main-width}) / 2);
     overflow: hidden;
     position: fixed;
     left: 0;
     top: 0;
+    background-image: url(./assets/footer.png);
   }
 
   #right {
-    height: 100vh;
+    height: 100%;
     width: calc((100% - #{$main-width}) / 2);
     overflow: hidden;
     position: fixed;
     right: 0;
     top: 0;
+    background-image: url(./assets/footer.png);
   }
 
   #top {
@@ -117,14 +119,14 @@ body {
       }
 
       #top {
-        width: 100vw;
+        width: 100%;
         height: 250px;
         overflow: hidden;
         margin: 0 auto;
       }
 
       .main {
-        width: 100vw;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-content: center;
